tests/baselines/reference/labeledStatementWithLabel_strict.errors.txt
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(2,1): error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(3,1): error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(4,1): error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(5,1): error TS1344: 'EnumDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(6,1): error TS1344: 'InterfaceDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(7,1): error TS1344: 'ClassDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(8,1): error TS1344: 'VariableStatement' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(9,1): error TS1344: 'VariableStatement' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(10,1): error TS1344: 'VariableStatement' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(12,1): error TS1344: 'ModuleDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(12,8): error TS1235: A namespace declaration is only allowed in a namespace or module.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(13,1): error TS1344: 'ModuleDeclaration' declarations cannot be labeled.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(13,8): error TS1235: A namespace declaration is only allowed in a namespace or module.
tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts(14,1): error TS1344: 'TypeAliasDeclaration' declarations cannot be labeled.


==== tests/cases/conformance/statements/labeledStatements/labeledStatementWithLabel_strict.ts (14 errors) ====
    "use strict"
    label: function fn() { }
    ~~~~~
!!! error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
    label: function* gen() { }
    ~~~~~
!!! error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
    label: async function gen1() { }
    ~~~~~
!!! error TS1344: 'FunctionDeclaration' declarations cannot be labeled.
    label: enum E {}
    ~~~~~
!!! error TS1344: 'EnumDeclaration' declarations cannot be labeled.
    label: interface I {}
    ~~~~~
!!! error TS1344: 'InterfaceDeclaration' declarations cannot be labeled.
    label: class C { }
    ~~~~~
!!! error TS1344: 'ClassDeclaration' declarations cannot be labeled.
    label: var a = 1;
    ~~~~~
!!! error TS1344: 'VariableStatement' declarations cannot be labeled.
    label: let b = 1;
    ~~~~~
!!! error TS1344: 'VariableStatement' declarations cannot be labeled.
    label: const c = 1;
    ~~~~~
!!! error TS1344: 'VariableStatement' declarations cannot be labeled.
    
    label: module M { }
    ~~~~~
!!! error TS1344: 'ModuleDeclaration' declarations cannot be labeled.
           ~~~~~~
!!! error TS1235: A namespace declaration is only allowed in a namespace or module.
    label: namespace N {}
    ~~~~~
!!! error TS1344: 'ModuleDeclaration' declarations cannot be labeled.
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed in a namespace or module.
    label: type T = {}
    ~~~~~
!!! error TS1344: 'TypeAliasDeclaration' declarations cannot be labeled.
    